<resources>
    <string name="app_name" translatable="false">NS Domibyg</string>
    <string name="action_settings">Settings</string>
    <string name="ImageDesc">Welcome logo</string>
    <string name="take_a_photo">Take photo</string>
    <string name="newPhoto">New</string>
    <string name="keepPhoto">OK</string>
    <string name="preview">preview</string>
    <string name="homebutton">meButton</string>

    <string name="user_name">Your name</string>
    <string name="user_phone">Phone number</string>

    <string name="login_button">Get in</string>
    <string name="send_button">Send</string>
    <string name="InformationLogin">Please fill the fields bellow. You will see this form only once so make sure both your name and your phone number are correct.</string>
    <string name="CheckBox">Remember me</string>
    <string name="DescribeActionTakePhoto">Take a new picture for your report</string>
    <string name="counter_description">Pictures to be taken today:</string>
</resources>
