<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:weightSum="1">

    <ImageButton
        android:layout_width="95dp"
        android:layout_height="94dp"
        android:id="@+id/imageButton2"
        android:src="@mipmap/ic_logo"
        android:background="#ffffff"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="0dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="0dp"
        android:contentDescription="@string/homebutton" />

    <Button
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:text="@string/newPhoto"
        android:id="@+id/button2"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="33dp"
        android:layout_marginLeft="75dp"
        android:layout_marginStart="38dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp" />

    <Button
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:text="@string/keepPhoto"
        android:id="@+id/button3"
        android:layout_gravity="center_horizontal"
        android:layout_marginEnd="38dp"
        android:layout_marginRight="75dp"
        android:layout_alignTop="@+id/button2"
        android:layout_alignParentEnd="true" />

    <ImageView
        android:layout_width="400dp"
        android:layout_height="600dp"
        android:id="@+id/imageView"
        android:contentDescription="@string/preview"
        android:layout_below="@+id/imageButton2"
        android:layout_alignParentEnd="true"
        android:layout_above="@+id/button2" />
</RelativeLayout>